--- a/not TitanFall 3.vcxproj.filters
+++ b/not TitanFall 3.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Dependencies\Includes\stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\glad.c">
@@ -41,6 +44,9 @@
     <ClCompile Include="src\stb_image.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\1.png">
@@ -53,6 +59,12 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="res\textures\why.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\textures\awesomeface.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\textures\container.jpg">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
