--- a/not TitanFall 3.vcxproj
+++ b/not TitanFall 3.vcxproj
@@ -232,6 +232,10 @@
     <ClInclude Include="Dependencies\Includes\GLAD\glad.h" />
     <ClInclude Include="Dependencies\Includes\KHR\khrplatform.h" />
     <ClInclude Include="Dependencies\Includes\stb_image.h" />
+    <ClInclude Include="src\Animation.h" />
+    <ClInclude Include="src\Animator.h" />
+    <ClInclude Include="src\assimp_glm_helper.h" />
+    <ClInclude Include="src\Bone.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Engine.h" />
     <ClInclude Include="src\Game.h" />
@@ -244,6 +248,7 @@
     <ClInclude Include="src\Texture.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Bone.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Engine.cpp" />
     <ClCompile Include="src\Game.cpp" />
