--- a/not TitanFall 3.vcxproj
+++ b/not TitanFall 3.vcxproj
@@ -278,6 +278,7 @@
     <ClCompile Include="src\EntityV.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\glad.c" />
+    <ClCompile Include="src\lightDir.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\Player.cpp" />
