--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,10 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=6,21
 Size=400,400
+Collapsed=0
+
+[Window][Entities]
+Pos=1087,58
+Size=187,288
 Collapsed=0
 
